// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumerAreaInput components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
      },
      Object {
        "alignItems": "center",
        "height": 60,
        "justifyContent": "center",
        "lineHeight": 60,
        "width": 100,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    clearTextOnFocus={true}
    editable={true}
    key="test"
    keyboardType="numeric"
    maxLength={3}
    multiline={true}
    numberOfLines={1}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder=""
    placeholderTextColor="rgba(103, 112, 123, 0.5)"
    rejectResponderTermination={true}
    selectionColor="rgba(152, 165, 198, 1)"
    style={
      Array [
        Object {
          "alignItems": "center",
          "color": "rgba(103, 112, 123, 1)",
          "fontSize": 30,
          "height": 30,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": "100%",
        },
        null,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`NumerAreaInput components render change 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
      },
      Object {
        "alignItems": "center",
        "height": 60,
        "justifyContent": "center",
        "lineHeight": 60,
        "width": 100,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    clearTextOnFocus={true}
    editable={true}
    key="test"
    keyboardType="numeric"
    maxLength={3}
    multiline={true}
    numberOfLines={1}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder=""
    placeholderTextColor="rgba(103, 112, 123, 0.5)"
    rejectResponderTermination={true}
    selectionColor="rgba(152, 165, 198, 1)"
    style={
      Array [
        Object {
          "alignItems": "center",
          "color": "rgba(103, 112, 123, 1)",
          "fontSize": 30,
          "height": 30,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": "100%",
        },
        null,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`NumerAreaInput components render focus 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "red",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginTop": 20,
      },
      Object {
        "alignItems": "center",
        "height": 60,
        "justifyContent": "center",
        "lineHeight": 60,
        "width": 100,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    clearTextOnFocus={true}
    editable={true}
    key="test"
    keyboardType="numeric"
    maxLength={3}
    multiline={true}
    numberOfLines={1}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder=""
    placeholderTextColor="rgba(103, 112, 123, 0.5)"
    rejectResponderTermination={true}
    selectionColor="rgba(152, 165, 198, 1)"
    style={
      Array [
        Object {
          "alignItems": "center",
          "color": "rgba(103, 112, 123, 1)",
          "fontSize": 30,
          "height": 30,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": "100%",
        },
        null,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;
